Template products details created

--- a/templates/partials/_nav.html
+++ b/templates/partials/_nav.html
@@ -31,7 +31,7 @@
             <li class="nav-item">
                 <a class="nav-link nav-cart-link active" href="#">
                     <span class="nav-cart-text mr-1">
-                        Carrinho
+                        Cart
                     </span>
                     <span class="nav-cart-count mr-1">
                         <strong>109x</strong>
