--- a/product/templates/product/cart.html
+++ b/product/templates/product/cart.html
@@ -1,7 +1,93 @@
 {% extends "static/base.html" %}
+{% load omfilters %}
+{% load static %}
 
 {% block content %}
 
-    {{ request.session.cart }}
+{% if cart %}
+
+    <div class="row mt-3">
+        <div class="col">
+            <h3>Your cart</h3>
+            <p class="lead">The products, quantities and prices you chose.</p>
+
+            <div class="table-responsive">
+                <table class="table">
+                    <tr>
+                        <th class="d-none d-lg-block">Image</th>
+                        <th>Product</th>
+                        <th>Option</th>
+                        <th>QTD</th>
+                        <th>Total</th>
+                    </tr>
+
+                    {% for line in cart.values %}
+                        <tr>
+                            <td class="d-none d-lg-block">
+                                <img class="cart-img" src="{% get_media_prefix %}{{ line.image }}">
+                            </td>
+                            <td>
+                                <a href="{% url "product:detail" line.slug %}">
+                                    {{ line.product_name }}
+                                </a>
+                                <a class="ml-3" href="{% url "product:removefromcart" %}?vid={{ line.variation_id }}">
+                                    <i class="fas fa-times-circle text-danger" aria-hidden="true"></i>
+                                </a>
+                            </td>
+                            <td>{{ line.variation_name }}</td>
+                            <td>
+                                {{ line.amount }} x
+                                {% if line.price_unitary_promotional %}
+                                    {{ line.price_unitary_promotional|format_price }}
+                                {% else %}
+                                    {{ line.price_unitary|format_price }}
+                                {% endif %}
+                            </td>
+
+                            {% if line.price_quantitative_promotional %}
+                                <td>{{ line.price_quantitative_promotional|format_price}}</td>
+                            {% else %}
+                                <td>{{ line.price_quantitative|format_price}}</td>
+                            {% endif %}
+                        </tr>
+                    {% endfor %}
+
+                </table>
+            </div>
+        </div>
+    </div>
+
+
+
+    <div class="row mt-3">
+        <div class="col-lg">
+            <p class='lead'>Total in cart</p>
+
+            <div class='table-responsive'>
+                <table class="table">
+                    <tr>
+                        <td class="font-weight-bold">Total</td>
+                        <td>R$100000</td>
+                    </tr>
+                </table>
+            </div>
+        </div>
+        <div class="col-lg mt-auto">
+            <a class="btn btn-lg btn-block btn-primary" href="#">
+                Conclude order
+            </a>
+        </div>
+    </div>
+
+{% else %}
+
+    <div class="row mt-3">
+        <div class="col">
+            <h3>Empty cart</h3>
+            <p class="lead">There are no products in your cart!</p>
+        </div>
+    </div>
+
+{% endif %}
 
 {% endblock %}
