--- a/templates/partials/_footer.html
+++ b/templates/partials/_footer.html
@@ -5,12 +5,12 @@
         <div class="row">
             <div class="col">
                 <div class="p-1">
-                    <span class="align-middle p-1">Feito com Django</span>
+                    <span class="align-middle p-1">Done with Django</span>
                 </div>
             </div>
             <div class="col">
                 <div class="p-1 text-right">
-                    <span class="align-middle p-1">Por Luiz Otávio</span>
+                    <span class="align-middle p-1">By Jorge Aragão</span>
                 </div>
             </div>
         </div>
