--- a/user/templates/user/update.html
+++ b/user/templates/user/update.html
@@ -2,6 +2,7 @@
 
 {% block registertitle %}
 
-    <h1>Update data</h1>
+    <h4>Update data</h4>
+    <p>User the form bellow to update your data.</p>
 
 {% endblock  %}
