--- a/product/templates/product/cart.html
+++ b/product/templates/product/cart.html
@@ -10,50 +10,7 @@
         <div class="col">
             <h3>Your cart</h3>
             <p class="lead">The products, quantities and prices you chose.</p>
-
-            <div class="table-responsive">
-                <table class="table">
-                    <tr>
-                        <th class="d-none d-lg-block">Image</th>
-                        <th>Product</th>
-                        <th>Option</th>
-                        <th>QTD</th>
-                        <th>Total</th>
-                    </tr>
-
-                    {% for line in cart.values %}
-                        <tr>
-                            <td class="d-none d-lg-block">
-                                <img class="cart-img" src="{% get_media_prefix %}{{ line.image }}">
-                            </td>
-                            <td>
-                                <a href="{% url "product:detail" line.slug %}">
-                                    {{ line.product_name }}
-                                </a>
-                                <a class="ml-3" href="{% url "product:removefromcart" %}?vid={{ line.variation_id }}">
-                                    <i class="fas fa-times-circle text-danger" aria-hidden="true"></i>
-                                </a>
-                            </td>
-                            <td>{{ line.variation_name }}</td>
-                            <td>
-                                {{ line.amount }} x
-                                {% if line.price_unitary_promotional %}
-                                    {{ line.price_unitary_promotional|format_price }}
-                                {% else %}
-                                    {{ line.price_unitary|format_price }}
-                                {% endif %}
-                            </td>
-
-                            {% if line.price_quantitative_promotional %}
-                                <td>{{ line.price_quantitative_promotional|format_price}}</td>
-                            {% else %}
-                                <td>{{ line.price_quantitative|format_price}}</td>
-                            {% endif %}
-                        </tr>
-                    {% endfor %}
-
-                </table>
-            </div>
+            {% include "partials/_cart.html" %}
         </div>
     </div>
 
@@ -72,11 +29,20 @@
                 </table>
             </div>
         </div>
-        <div class="col-lg mt-auto">
-            <a class="btn btn-lg btn-block btn-primary" href="#">
-                Conclude order
-            </a>
-        </div>
+
+        {% if request.user.is_authenticated %}
+            <div class="col-lg mt-auto">
+                <a class="btn btn-lg btn-block btn-primary" href="{% url "product:purchasesummary" %}">
+                    Buy
+                </a>
+            </div>
+            {% else %}
+            <div class="col-lg mt-auto">
+                <a class="btn btn-lg btn-block btn-primary" href="{% url "user:create" %}">
+                    Login / Register - and Buy
+                </a>
+            </div>
+        {% endif %}
     </div>
 
 {% else %}
