--- a/order/templates/order/pay.html
+++ b/order/templates/order/pay.html
@@ -2,6 +2,12 @@
 
 {% block content %}
 
-    Payyyyyyyy
+    <div class="row">
+        <div class="col">
+            <h3>Choose payment method</h3>
+            <p>For devs: add you payment method.</p>
+        </div>
+    </div>
+
 
 {% endblock %}
