--- a/order/templates/order/pay.html
+++ b/order/templates/order/pay.html
@@ -1,13 +1,69 @@
 {% extends "static/base.html" %}
+{% load static %}
+{% load omfilters %}
 
 {% block content %}
 
-    <div class="row">
-        <div class="col">
-            <h3>Choose payment method</h3>
-            <p>For devs: add you payment method.</p>
+<div class="row">
+    <div class="col">
+        <h3>{{ order }}</h3>
+
+        <div class="row mt-4">
+            <div class="col-lg-2 font-weight-bold">Order N:</div>
+            <div class="col-lg-4">{{ order.id }}</div>
+            <div class="col-lg-2 font-weight-bold">Total:</div>
+            <div class="col-lg-4">{{ order.total|format_price }}</div>
+
+            <div class="col-lg-2 font-weight-bold">QTD. Items:</div>
+            <div class="col-lg-4">{{ order.qty_total }}</div>
+            <div class="col-lg-2 font-weight-bold">Status:</div>
+            <div class="col-lg-4">{{ order.get_status_display}}</div>
         </div>
+
+        <div class="row mt-4">
+            <div class="col">
+                <h3>Products</h3>
+            </div>
+        </div>
+
+        <div class="table-responsive mt-3">
+            <table class="table">
+                <tr>
+                    <th class="d-none d-lg-block">Image</th>
+                    <th>Product</th>
+                    <th>V.</th>
+                    <th>QTD.</th>
+                    <th>Total</th>
+                </tr>
+                {% for line in order.itemorder_set.all %}
+                    <tr>
+                        <td class="d-none d-lg-block">
+                            <img class="cart-img" src="{% get_media_prefix %}{{ line.image }}">
+                        </td>
+                        <td>{{ line.product_name }}</td>
+                        <td>{{ line.option }}</td>
+                        <td>{{ line.quantity }}</td>
+                        <td>
+                            {% if line.price_quantitative_promotional %}
+                                {{ line.price_quantitative|format_price }}
+                            {% else %}
+                                {{ line.price|format_price }}
+                            {% endif %}
+                        </td>
+                    </tr>
+                {% endfor %}
+
+            </table>
+        </div>
+
+
+        <div class="row mt-4">
+            <div class="col">
+                <a href="#" class="btn btn-primary btn-block btn-lg">Pay</a>
+            </div>
+        </div>
+
+
     </div>
-
-
+</div>
 {% endblock %}
