--- a/product/templates/product/purchasesummary.html
+++ b/product/templates/product/purchasesummary.html
@@ -67,7 +67,7 @@
 
     <div class="row">
         <div class="col">
-            <a class="btn btn-block btn-primary btn-lg" href="{% url "order:pay" %}">
+            <a class="btn btn-block btn-primary btn-lg" href="{% url "order:saveorder" %}">
                 Place order and pay
             </a>
         </div>
