Views List and Details created

--- a/templates/partials/_nav.html
+++ b/templates/partials/_nav.html
@@ -17,7 +17,8 @@
                         Account
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <a class="dropdown-item" href="{% url "user:create" %}">Update data</a>
+                        <a class="dropdown-item" href="{% url "order:list" %}">My requests</a>
+                        <a class="dropdown-item" href="{% url "user:create" %}">Update my data</a>
                         <a class="dropdown-item" href="{% url "user:logout" %}">Log out</a>
                     </div>
                 </li>
