Title pages adjusted

--- a/user/templates/user/update.html
+++ b/user/templates/user/update.html
@@ -1,5 +1,5 @@
 {% extends 'user/create.html' %}
-
+{% block title %}Update {{ user }} profile | {% endblock %}
 {% block registertitle %}
 
     <h4>Update data</h4>
