--- a/product/templates/product/cart.html
+++ b/product/templates/product/cart.html
@@ -1,7 +1,7 @@
 {% extends "static/base.html" %}
 {% load omfilters %}
 {% load static %}
-
+{% block title %}Cart | {% endblock %}
 {% block content %}
 
 {% if cart %}
