--- a/product/templates/product/detail.html
+++ b/product/templates/product/detail.html
@@ -1,6 +1,6 @@
 {% extends "static/base.html" %}
 {% load omfilters %}
-
+{% block title %}{{ product.name }} | {% endblock %}
 {% block content %}
     <div class="row">
         <div class="col-lg">
