--- a/product/templates/product/list.html
+++ b/product/templates/product/list.html
@@ -1,6 +1,6 @@
 {% extends "static/base.html" %}
 {% load omfilters %}
-
+{% block title %}Products | {% endblock %}
 {% block content %}
 
     <div class="row">
