--- a/product/templates/product/purchasesummary.html
+++ b/product/templates/product/purchasesummary.html
@@ -1,7 +1,6 @@
 {% extends 'static/base.html' %}
-
 {% load omfilters %}
-
+{% block title %}Purchase Summary | {% endblock %}
 {% block content %}
 
     <div class="row mb-5">
