--- a/templates/partials/_cart.html
+++ b/templates/partials/_cart.html
@@ -1,6 +1,6 @@
 {% load static %}
 {% load omfilters %}
-
+{% block title %}{% endblock %}
 <div class="table-responsive">
     <table class="table">
         <tr>
