--- a/user/templates/user/create.html
+++ b/user/templates/user/create.html
@@ -1,7 +1,6 @@
 {% extends "static/base.html" %}
-
 {% load crispy_forms_tags %}
-
+{% block title %}Create profile | {% endblock %}
 {% block content %}
 <div class="row">
 
